mkdocs settings file update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,4 +6,4 @@ repo_url: https://github.com/mislavcimpersak/awesome-fun
 theme: readthedocs
 google_analytics: ['UA-64090289-2', 'auto']
 pages:
-  - "All the fun in a single page": "index.md"
+  - "All the fun in a single page": "README.md"
