mkdocs settings file - added contributing file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,4 @@ theme: readthedocs
 google_analytics: ['UA-64090289-2', 'auto']
 pages:
   - "All the fun in a single page": "README.md"
+  - "Contributing guide": "CONTRIBUTING.md"
