--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ rvm:
 before_script:
   - gem install awesome_bot
 script:
-  - awesome_bot README.md --white-list github.com/sindresorhus/awesome
+  - awesome_bot README.md --allow-redirect --white-list github.com/sindresorhus/awesome
